# itmo-cg-task2

./: CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
src/App/: CMakeLists.txt  Camera.cpp  Camera.h  Entity.cpp  Entity.h  ModelEntity.cpp  ModelEntity.h  OpenGLContext.cpp  OpenGLContext.h  SceneGraph.cpp  SceneGraph.h  SceneRenderer.cpp  SceneRenderer.h  SkyboxEntity.cpp  SkyboxEntity.h  Window.cpp  Window.h  main.cpp  resources.qrc
src/App/Models/: chess.glb  noel.glb  sponza.glb
src/App/Shaders/: diffuse.fs  diffuse.vs  model.fs  model.vs  skybox.vs
src/Base/: CMakeLists.txt  GLWidget.cpp  GLWidget.hpp
